<resources>
    <string name="app_name">QuanLyThuChi</string>
    <string name="nav_khoan_thu">Khoản Thu</string>
    <string name="nav_khoan_chi">Khoản Chi</string>
    <string name="nav_thong_ke">Thống Kê</string>
    <string name="nav_tai_khoan">Acount</string>
    <string name="nav_user">Tài Khoản</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_thoat">Thoát</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>